fixed spacing

--- a/comp/scss/_main.scss
+++ b/comp/scss/_main.scss
@@ -56,6 +56,16 @@ body {
     }
 }
 
+//about
+
+.about{
+	padding: $section-padding;
+
+	h2{
+		padding: $title-paragraph-padding;
+	}
+}
+
 /*CATEGORIES*/
 
 .width{
@@ -134,6 +144,16 @@ body {
 	background-size: cover;
 }
 
+//products
+
+.products{
+	padding: $section-padding;
+
+	h2{
+		padding: $title-paragraph-padding;
+	}
+}
+
 .atc{
 	background-color: $font-color-no-bg;
 	border-style: none;
@@ -147,6 +167,15 @@ body {
 	background: linear-gradient(rgba(0,0,0,0.15), rgba(0,0,0,0.15)),
 		url("../../assets/images/wave-bkgd.jpg");
 	background-position: bottom;
+	padding: $section-padding;
+
+	h2{
+		padding: $title-paragraph-padding;
+	}
+
+	p{
+		padding: $title-paragraph-padding;
+	}
 }
 
 .subscribe_form {
@@ -170,9 +199,10 @@ body {
 
 /*footer*/
 
-.contact_info {
+footer{
     background-color: #2d2a2a;
     border-top: .5rem solid white;
+    padding: $section-padding;
 
     div:first-child ul li{
     	line-height: 250%;
@@ -181,8 +211,11 @@ body {
 
 .social_media_logo {
     width: 30%;
+    padding: 0 .5rem 0 .5rem;
 }
 
 .social_media_name {
-    width: 5rem;
+    width: 6rem;
+    display: flex;
+    justify-content: flex-start;
 }
