--- a/comp/scss/_media_query.scss
+++ b/comp/scss/_media_query.scss
@@ -12,6 +12,10 @@
 		font-size: 3rem;
 	}
 
+	.font-size-p{
+		font-size: 1.6rem;
+	}
+
 }
 
 @media screen and (min-width: 1000px) and (max-width: 1239px){
@@ -25,6 +29,10 @@
 
 	.font-sizeh2{
 		font-size: 2.5rem;
+	}
+
+	.font-size-p{
+		font-size: 1.4rem;
 	}
 
 }
@@ -86,14 +94,6 @@
   	.banner{
   		padding: 45% 0 45% 0;
   	}
-
-  	.font-sizeh1{
-		font-size: 2rem;
-	}
-
-	.font-sizeh2{
-		font-size: 1.5rem;
-	}
 
 	.social_media_name {
   		display: none;
