--- a/comp/scss/_typography.scss
+++ b/comp/scss/_typography.scss
@@ -63,6 +63,10 @@
 	font-size: 2rem;
 }
 
+.font-size-p{
+	font-size: 1.1rem;
+}
+
 .red{
 	color: $font-colorful;
 }
