--- a/comp/scss/_variables.scss
+++ b/comp/scss/_variables.scss
@@ -4,3 +4,5 @@ $font-colorful: #ed3c21;
 $borders: #d6d8db;
 $category-padding-big: 20% 0 20% 0;
 $category-padding-small: 41% 0 41% 0;
+$section-padding: 3rem 4% 3rem 4%;
+$title-paragraph-padding: 0 0 1.5rem 0;
